--- a/backup/mainlib/docs/14822275237086.md
+++ b/backup/mainlib/docs/14822275237086.md
@@ -4,7 +4,7 @@
 手机发了手机发了时间烦死了方式解决方式累计发生了房间睡懒觉烦死了烦诶飞机上了飞机死了烦死
 我就放了是否就是雷锋精神了方式jlwieifjjfls三级分类收集方式
 
-[下载 PDF](/assets/book/Ecma-262.pdf)
+[下载 PDF](/resource/book/test.pdf)
 
     package com.test;
      
@@ -56,3 +56,5 @@
         }
      
     }
+
+
