--- a/backup/mainlib/docs/14822275237086.md
+++ b/backup/mainlib/docs/14822275237086.md
@@ -1,8 +1,6 @@
 你好，世界
 
-我的第一篇文章sslfalfjslfjwieifslfsjl烦死了烦就是雷锋精神疗法时间方式累计发生了减法所肩负历史交锋历史
-手机发了手机发了时间烦死了方式解决方式累计发生了房间睡懒觉烦死了烦诶飞机上了飞机死了烦死
-我就放了是否就是雷锋精神了方式jlwieifjjfls三级分类收集方式
+我的第一篇文章sslfalfjslfjwieifslfsjl我的第一篇文章sslfalfjslfjwieifslfsjl就是雷锋精神疗法时间方式累计发生了减法所肩负历史交锋历史手机发了手机发了时间烦死了方式解决方式累计发生了房间睡懒觉烦死了烦诶飞机上了飞机我的第一篇文章sslfalfjslfjwieifslfsjl我就放了是否就是雷锋精神了方式jlwieifjjfls三级分类收集方式
 
 [下载 PDF](/resource/book/test.pdf)
 
