--- a/backup/mainlib/docs/14830871336713.md
+++ b/backup/mainlib/docs/14830871336713.md
@@ -38,13 +38,13 @@
 * [测试] 测试是项目中很重要的一环，不能混，敷衍，准出的关要把好
 * [招聘] 宁缺毋滥，招聘不能着急，不用过于考虑其他的杂项
 
-### 开除与压榨
+### 开人与压榨
 
-你开过人吗？我开过。这是第一次开一个人（我们暂且叫他Z吧），也就是试用期没有续签合同。这方面问题以前从来没有出现过，我面试还是属于比较谨慎的，后来想了一下，还是因为当时太着急了。当时处于项目需求已经确认完毕，已经开始进行开发工作，但是还差一个iOS开发。天天看着项目计划上面的进度甘特图红色的条越来越多，真的是很着急。由于项目时间紧，我也在一直在忙于其他的方面的工作，没有时间专心去进行面试招聘工作。当时面试Z的时候，对着简历问了一遍，看了他以前做的APP，也有可能是前面几个面试的太差了，考虑到已经有任务开始过期了，在纠结一会儿后决定录用。但是入职后，不管是代码质量和进度都不是很满意。突然有一天，人事给我打电话问，你觉得Z怎么样。我如实说了情况，就没放在心上，然后继续去工作十小时休息五分钟了。但是过一会儿人事又打电话过来说，公司决定不和Z继续签合同，他有工作经验等方面的造假，他暂时也提供不了有效证件无法给他缴纳社保公积金等。我当时有点懵，然后听的有点凌乱，大概意思就是你可以装不知道，公司会处理后面的人事。当天晚上我就在想，如果我的评语稍微好一点，是不是这个人就不会被开了。这件事情纠结了好长时间，唉...
+你开过人吗？我开过。这是第一次开一个人（我们暂且叫他Z吧），也就是试用期没有续签合同。这方面问题以前从来没有出现过，我面试还是属于比较谨慎的，后来想了一下，还是因为当时太着急了。当时处于项目需求已经确认完毕，已经开始进行开发工作，但是还差一个iOS开发。天天看着项目计划上面的进度甘特图红色的条越来越多，真的是很着急。由于项目时间紧，我也在一直在忙于其他的方面的工作，没有时间专心去进行面试招聘工作。当时面试Z的时候，对着简历问了一遍，看了他以前做的APP，也有可能是前面几个面试的太差了，考虑到已经有任务开始过期了，在纠结一会儿后决定录用。但是入职后，不管是代码质量和进度都不是很满意。突然有一天，人事给我打电话问，你觉得Z怎么样。我如实说了情况，就没放在心上，然后继续去工作十小时休息五分钟了。但是过一会儿人事又打电话过来说，公司决定不和Z继续签合同，他有工作经验等方面的造假，他暂时也提供不了有效证件无法给他缴纳社保公积金等。我当时有点懵，然后听的有点凌乱，大概意思就是公司会处理善后，你无需参与。当天晚上我就在想，如果我的评语稍微好一点，是不是这个人就不会被开了。这件事情纠结了好长时间，唉...
 
 你压榨过人吗？我压榨过。这是我第一次盯一个人（我们暂且叫他Q吧）盯这么紧。我个人属于效率较高，喜欢时间比较松散的，所以对于下面的人员管理还是比较松散的，不是属于强压类型的。一般工作内容和工作计划都是团队共同制定的，大家全都认可的，然后大家按照计划执行。我不会故意收紧时间。原本需要一周的时间，一定强压三天完成，大家都是一直紧张的加班的状态下。我一直认为加班只是短期有效，长期无效的。长时间的加班会越来越效率低下，质量会越来越差。Q其实是Z的接替者，也是Z走后招聘进来的，工作内容方面的表现会稍优于Z，工作经验也不是特别丰富。但是Q的态度还是非常认真的，有时工作都到凌晨一点钟，然后第二天九点钟继续。Q对自己的时间管理不是很好，有些拖拉，代码质量方面也不是特别好，bug特别多。在后期的有一段时间里，他基本上是和我”结对“编程的。我要求他对自己的工作内容切分成2个小时的小任务，然后一一执行，快速的解决问题。那段时间Q的压力应该是最大的，幸好他坚持了下来。后来想想，以后真的再也不会这么干了，唉...
 
-前面说了，加班到凌晨然后第二天九点继续，这根本保证不了休息，因为还要回家，在路上还一段时间。这方面我早就想到了，然后在办公地的附近给所有的开发人员安排了宿舍或者酒店，大概5分钟就可以到休息的地方，洗澡睡觉。在这个项目，我也承担了保姆的角色，点餐、订座、住宿、打球订场只要是对项目有益的活动都可以安排。这个项目的伙食等生活方面，还是得到了项目组童鞋的一致好评，这我很欣慰。其实真正压榨的人是BOSS，我也只是一个干活的，我也是被压榨的，唉...
+前面说了，加班到凌晨然后第二天九点继续，这根本保证不了休息，因为还要回家，在路上还一段时间。这方面我早就想到了，在办公地的附近给所有的开发人员安排了宿舍或者酒店，大概5分钟就可以到休息的地方，洗澡睡觉。在这个项目，我也承担了保姆的角色，点餐、订座、住宿、打球订场只要是对项目有益的活动都可以安排。这个项目的伙食等生活方面，还是得到了项目组童鞋的一致好评，这我很欣慰。其实真正压榨的人是BOSS，我也只是一个干活的，我也是被压榨的，唉...
 
 ### 关于招聘与团队文化建设
 
@@ -56,7 +56,7 @@
 
 为什么会有这么多应聘者？因为很多公司倒闭了。面试中，当问题为什么离职时，很多人都说公司倒闭了，公司业务调整了，公司融资的钱花完了。所以一方面可以看出国家的经济是多少的萧条，另一个方面也可以看出今年是移动互联网萧条的一年。前几天看到一个帖子，[哈哈哈哈哈哈哈哈哈哈哈《iOS界裁员：从入门到精通》](http://www.cocoachina.com/programmer/20161226/18437.html)，哈哈哈仅供娱乐。
 
-公司的移动团队是去年底才刚开始组建的，今天在移动方面的招聘做的还是不够，也是因为项目的原因没有时间嘛。但是移动团队的人员收获还是挺大的，小团队已经初步完成。目前移动团队中已经有3个iOS开发（包括我），3个Android开发，2个Web前端开发，1个美工。希望移动团队可以越来越壮大，团队氛围越来越好。
+公司的移动团队是去年底才刚开始组建的，今年在移动方面的招聘做的还是不够，也是因为项目的原因没有时间嘛。但是移动团队的人员收获还是挺大的，小团队已经初步完成。目前移动团队中已经有3个iOS开发（包括我），3个Android开发，2个Web前端开发，1个美工。希望移动团队可以越来越壮大，团队氛围越来越好。
 
 我一直提倡团队成员要有分享精神，在公司也组织了非常多的内部分享活动，想带动一下公司的技术氛围。但是参与的人目前还是主要是我下属的童鞋比较多，其他项目组参与的真的很少。期间由于项目紧张停止过一段时间，后续空闲后，技术分享会继续。但是期望会改变，先带动移动小团队的技术氛围吧，毕竟全公司的话人员太多。对于团队文化建设看到过[知乎的一个回答](https://www.zhihu.com/question/19662593)感觉说的还是挺好的：对于任何一个团队和公司，决定团队文化的是领导者本人。而小公司靠感情、中等公司靠制度，大公司靠文化。初创团队重要的不是文化，而是感情维系。和你的团队成员成为朋友吧，有共同的兴趣和爱好，一起腐败、一起K歌、一起郊游，你们共同的价值观将会在了解中塑造，在熟悉中成长。
 
@@ -91,6 +91,10 @@
 #### 架构
 
 项目主要对微服务和领域模型使用较多，但是使用的效果并不理想。对于架构感觉需要了解的内容还是非常多的，已经准备了相关书籍，后续会充电起来。
+
+#### Sketch
+
+Sketch是一个非常出色的原型设计工具。当初买的时候花了328软妹币（49刀好像，现在已经涨价到99刀），但是后来用了之后发现确实非常的赞。在今年的项目中我参与了三个岗位角色原型图的制作，可以通过下面的三个链接感受一下，销售顾问： [https://marvelapp.com/ce3234](https://marvelapp.com/ce3234) 销售经理：[https://marvelapp.com/j14ehd](https://marvelapp.com/j14ehd) 总 经 理：[https://marvelapp.com/2047g7a](https://marvelapp.com/2047g7a)
 
 ### 电影、剧与书
 
