2017-01-01-continuous-deployment-at-instagram

--- a/backup/mainlib/docs/14830871336713.md
+++ b/backup/mainlib/docs/14830871336713.md
@@ -171,6 +171,12 @@
 
 自行车基本没骑，网球打的次数很少。项目比较紧，有段时间每天晚上跑步2.5公里，和Keep无器械健身一组。不过最近没运动，运动还是需要坚持啊。
 
+### 酒店与饭店
+
+酒店，今年住莫泰整整住了大半年。因为客户要求在客户提供的地址办公，每天单趟在路上的时间就2个半小时左右，所以为了节省时间就再办公地附近租了一间三室一厅的房子。但是房子还是太小了，根本住不下，所以有些童鞋就只能临时住莫泰酒店了。谁知道这临时的一小住竟然住了大半年。住了大半年的房价才现在这个太消耗成本了，稍微计算了一下，今年花在酒店住宿上面的金额大概是10W+，这钱花在什么地方上面不好呀。最近这一年多快两年的时间，接触到这种开公司的额外花销越来越多，才知道原来创业即使不是像滴滴那些纯烧钱的公司一样也还是非常烧钱的，到处都需要花钱。一年的酒店没有白住，住酒店也是有收获。如果是短住，酒店价格应该是网络上面的最便宜；如果是长住，可以和酒店经理协商价格。协商的价格也是浮动的，随时关注价格，因为酒店也分闲时和忙时。比如我住的这里夏天的时候一般都是忙时，冬天的时候一般都是闲时。我这里就吃了亏，我是忙时入住的，协商的价格较高，住了很长时间，住到了闲时，这个价格一直不变就非常不划算了。酒店价格可浮动的空间还是蛮大的，还是要精打细算才能节省。
+
+饭店，项目组基本每周我都会安排一次聚餐，大家一起喝点酒，放松一下，畅快聊天。有家饭店我们一直经常去，因为这家店实在是太便宜了。这家店应该算是我在上海呆这么长时间吃过的最便宜的店，没有之一。魏记小厨，是这家店的名字。店面装修一般，但也不是特别差，有三层。这家店既便宜，菜量又大，非常的实惠。来一个数字大家感受一下，两桌十人餐，算酒水也就一千块左右，这个价格在上海真的是不敢想象，去别的店估计只能来一桌吧。为什么这家店这么便宜呢？这一年也不是白吃，也吃出了点收获。价格便宜，肯定要降低陈本，这家店的房子是老板自己的，所以老板少了在上海开店非常大的一个成本房租。另外这家店的老板菜市场都送他外号叫“鬼子”，因为他都是在傍晚来进货的，不是早上来进货，他基本都是扫尾的，所以他拿到的菜的价格都是最低的。虽然他是扫尾的，有可能菜的质量可能有些欠佳，但是目前来看老板应该还是注重品质的，特别差的应该也不要，只是让菜贩子预先给他预留一些他想要的菜，并不是去菜市场捡破烂的那种。现在大城市的餐饮业应该是最火的，吃相关的盈利应该都是百分之五十赚一半。其实开个餐饮类的店面也是非常赚钱的，即使不是这种三层的大饭店。听一个卖菜饭的老板说，他有个同学也卖菜饭，他周末都不上班，他只周一到周五去收钱，周六周天就让店里的人收。他现在五个店，一年赚大几十万。这种成功的例子有，但是失败的例子也见了很多。以前在中山公园附近上班的时候，公司楼下的门面基本一两个月就要换一次老板，基本也是餐饮类为主。其实店面的位置还不错，附近公司挺多的，吃饭的人挺多的，但是就是经营不下去了，关门的非常多。
+
 ### 目标与计划
 
 * 🦄 ”[见缝插针](http://jianfengchazhen.com/)“，暂时保密这是什么内容
